--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <div class="row mainDropdown">
                                     <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
-                                            <li class="followingLine dropDownCat">Case Studies</li>
+                                            <li><a class="dropdown-item dropDownCat" href="#projects">UX Case studies</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
@@ -70,9 +70,9 @@
     
                                     <div class="col-md-5 order-0 order-md-1">
                                         <ul class="list-unstyled">
-                                            <li class="followingLine dropDownCat">Categories</li>
-                                            <li><a class="dropdown-item" href="#projects">UX Case studies</a></li>
-                                            <li><a class="dropdown-item" href="#illustrations">Illustrations</a></li>
+                                            <li><a class="dropdown-item dropDownCat" href="#illustrations">Illustrations</a></li>
+                                            <li><a class="dropdown-item" href="#3Dassets">3D assets</a></li>
+                                            <li><a class="dropdown-item" href="#2Dassets">2D illustrations</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -80,7 +80,7 @@
                           </li>
                         
                         <li class="nav-item">
-                            <a class="fw-semibold nav-link" href="./About.html">
+                            <a class="fw-semibold nav-link" href="About.html">
                                 ABOUT
                             </a>
                         </li>
@@ -207,9 +207,9 @@
                     Illustrations
                 </h6>
                 <div class="row">
-                    <!-- Lo-fi Mobile -->
-                    <h6 class="pb-5 text-light text-opacity-75">3D assets</h6>
-                    <div class="container-fluid picturesMain3">
+                    <!-- 3D assets -->
+                    <h6 class="pb-5 text-light text-opacity-75" id="3Dassets">3D assets</h6>
+                    <div class="container-fluid pictures3Da">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201901_AC_Ace1959_01_A.jpg" data-caption="1959 AC Ace">
                             <img class="" src="./assets/img/Illustrations/3D/201901_AC_Ace1959_01_A_TN.jpg">
                         </a>
@@ -229,7 +229,7 @@
                             <img class="" src="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_02_TN.png">
                         </a>
                     </div>
-                    <div class="container-fluid picturesMain4 mb-5 pb-5">
+                    <div class="container-fluid pictures3Db mb-5 pb-5">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_AO.png" data-caption="2005 Aston Martin DB9">
                             <img class="" src="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_AO_TN.png">
                         </a>
@@ -312,8 +312,10 @@
                             <img class="" src="./assets/img/Illustrations/3D/201805_Sample09_TN.jpg">
                         </a>
                     </div>
-                    <h6 class="py-5 text-light text-opacity-75">2D illustrations</h6>
-                    <div class="container-fluid picturesMain2">
+
+                    <!-- 2D illustrations -->
+                    <h6 class="py-5 text-light text-opacity-75" id="2Dassets">2D illustrations</h6>
+                    <div class="container-fluid picturesTrad">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
                             <img class="" src="./assets/img/Illustrations/Others/201710_SFMTA_TN.png">
                         </a>
