--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -66,9 +66,9 @@
                                 <div class="row mainDropdown">
                                     <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
-                                            <li class="followingLine dropDownCat">Case Studies</li>
-                                            <li><a class="dropdown-item" href="../CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
-                                            <li><a class="dropdown-item" href="../CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
+                                            <li><a class="dropdown-item dropDownCat" href="../index.html#projects">UX Case studies</a></li>
+                                            <li><a class="dropdown-item" href="UX_VTP.html">Virtual Teaching Platform</a></li>
+                                            <li><a class="dropdown-item" href="UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
                                             <li><a class="dropdown-item" href="#">Odysseia</a></li>
                                         </ul>
@@ -76,9 +76,9 @@
 
                                     <div class="col-md-5 order-0 order-md-1">
                                         <ul class="list-unstyled">
-                                            <li class="followingLine dropDownCat">Others</li>
-                                            <li><a class="dropdown-item" href="../index.html#projects">UX Case studies</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#illustrations">Illustrations</a></li>
+                                            <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
+                                            <li><a class="dropdown-item" href="../index.html#3Dassets">3D assets</a></li>
+                                            <li><a class="dropdown-item" href="../index.html#2Dassets">2D illustrations</a></li>
                                         </ul>
                                     </div>
                                 </div>
