more linkage fix

--- a/About.html
+++ b/About.html
@@ -212,6 +212,11 @@
                     <a class="hvr-sweep UXCaseButton me-5" href="./assets/Dinh_Leon_Resume.pdf" target="_blank">Resume</a>
                     <a class="hvr-sweep UXCaseButton" href="mailto:leonx.dinh@gmail.com?subject = Portfolio = Message">Contact</a>
                 </div>
+                <div class="pt-5 d-block d-md-flex">
+                    <a class="me-4" href="https://www.linkedin.com/in/leonxdinh/" target="_blank">LinkedIn</a>
+                    <a class="me-4" href="https://github.com/kaider/Portfolio" target="_blank">Github</a>
+                    <a class="" href="https://www.artstation.com/kaazzeerr" target="_blank">ArtStation</a>
+                </div>
             </div>
 
         </section>
@@ -223,7 +228,8 @@
                 <p class="text-center my-0 px-4">Copyright &copy; Leon Dinh <span id="currentYear"></span></p>
                 <div class="socialIcon">
                     <a href="https://www.linkedin.com/in/leonxdinh/" target="_blank"> <img src="./assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
-                    <a href="https://github.com/kaider/Portfolio" target="_blank"> <img src="./assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
+                    <a href="https://github.com/kaider/" target="_blank"> <img src="./assets/img/Logo_GitHub.png" alt="Github"></a>
+                    <a href="https://www.artstation.com/kaazzeerr" target="_blank"> <img src="./assets/img/Logo_ArtStation.png" alt="ArtStation"></a>
                 </div>
             </div>
         </footer>
