--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -565,6 +565,7 @@
                 <div class="socialIcon">
                     <a href="https://www.linkedin.com/in/leonxdinh/" target="_blank"> <img src="../assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
                     <a href="https://github.com/kaider/Portfolio" target="_blank"> <img src="../assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
+                    <a href="https://www.artstation.com/kaazzeerr" target="_blank"> <img src="../assets/img/Logo_ArtStation.png" alt="ArtStation"></a>
                 </div>
             </div>
         </footer>
