--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item" href="#3Dassets">3D assets</a></li>
                                             <li><a class="dropdown-item" href="#2Dassets">2D illustrations</a></li>
+                                            <li><a class="dropdown-item" href="#productDesign">Product design</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -315,6 +316,44 @@
 
                     <!-- 2D illustrations -->
                     <h6 class="py-5 text-light text-opacity-75" id="2Dassets">2D illustrations</h6>
+                    <div class="container-fluid picturesTrad">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
+                            <img class="" src="./assets/img/Illustrations/Others/201710_SFMTA_TN.png">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201708_MRS.png" data-caption="Utah Transit Authority">
+                            <img class="" src="./assets/img/Illustrations/Others/201708_MRS_TN.png">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201802_MBTA.png" data-caption="Massachusetts Bay Transportation Authority">
+                            <img class="" src="./assets/img/Illustrations/Others/201802_MBTA_TN.png">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201804_MIA.png" data-caption="Miami-Dade Transit">
+                            <img class="" src="./assets/img/Illustrations/Others/201804_MIA_TN.png">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201603_Esher_imitation.jpg" data-caption="Escher Imitation">
+                            <img class="" src="./assets/img/Illustrations/Others/201603_Esher_imitation_TN.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_main.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_main_TN.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_01.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_01_TN.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_02.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_02_TN.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_03.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_03_TN.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_04.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_04_TN.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_old.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_old_TN.jpg">
+                        </a>
+                    </div>
+
+                    <!-- Product design -->
+                    <h6 class="py-5 text-light text-opacity-75" id="productDesign">Product Design</h6>
                     <div class="container-fluid picturesTrad">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
                             <img class="" src="./assets/img/Illustrations/Others/201710_SFMTA_TN.png">
