Added more pictures

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </h6>
                 <div class="row">
                     <!-- 3D assets -->
-                    <h6 class="pb-5 text-light text-opacity-75" id="3Dassets">3D assets</h6>
+                    <h4 class="pb-5 mt-3 text-light text-opacity-75" id="3Dassets">3D assets</h4>
                     <div class="container-fluid pictures3Da">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201901_AC_Ace1959_01_A.jpg" data-caption="1959 AC Ace">
                             <img class="" src="./assets/img/Illustrations/3D/201901_AC_Ace1959_01_A_TN.jpg">
@@ -315,8 +315,8 @@
                     </div>
 
                     <!-- 2D illustrations -->
-                    <h6 class="py-5 text-light text-opacity-75" id="2Dassets">2D illustrations</h6>
-                    <div class="container-fluid picturesTrad">
+                    <h4 class="py-5 mt-5 text-light text-opacity-75" id="2Dassets">2D illustrations</h4>
+                    <div class="container-fluid picturesTrad mb-5 pb-5">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
                             <img class="" src="./assets/img/Illustrations/Others/201710_SFMTA_TN.png">
                         </a>
@@ -353,40 +353,68 @@
                     </div>
 
                     <!-- Product design -->
-                    <h6 class="py-5 text-light text-opacity-75" id="productDesign">Product Design</h6>
+                    <h4 class="py-5 mt-5 text-light text-opacity-75" id="productDesign">Product Design</h4>
+                    <div class="py-4 align-items-end">
+                        <h5 class="playFair text-light text-opacity-75">Omron 75 keyboard</h5>
+                        <h6 class="pt-4 pb-3 text-light text-opacity-75 fw-light">
+                            If you're interested in the full build,&nbsp;
+                            <a class="text-light text-opacity-75 fw-light" href="https://deskthority.net/viewtopic.php?t=22022" data-tool-tip="https://deskthority.net/viewtopic.php?t=22022">please click here.</a>
+                        </h6>
+                    </div>
                     <div class="container-fluid picturesTrad">
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
-                            <img class="" src="./assets/img/Illustrations/Others/201710_SFMTA_TN.png">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_02.JPG" data-caption="Omron 75 CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/201812_Omron75_02.JPG">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201708_MRS.png" data-caption="Utah Transit Authority">
-                            <img class="" src="./assets/img/Illustrations/Others/201708_MRS_TN.png">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_03.png" data-caption="Omron 75 CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/201812_Omron75_03.png">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201802_MBTA.png" data-caption="Massachusetts Bay Transportation Authority">
-                            <img class="" src="./assets/img/Illustrations/Others/201802_MBTA_TN.png">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_04.JPG" data-caption="Omron 75 CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/201812_Omron75_04.JPG">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201804_MIA.png" data-caption="Miami-Dade Transit">
-                            <img class="" src="./assets/img/Illustrations/Others/201804_MIA_TN.png">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_05.png" data-caption="Omron 75 CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/201812_Omron75_05.png">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201603_Esher_imitation.jpg" data-caption="Escher Imitation">
-                            <img class="" src="./assets/img/Illustrations/Others/201603_Esher_imitation_TN.jpg">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_06.png" data-caption="Omron 75 CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/201812_Omron75_06.png">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_main.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_main_TN.jpg">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_07.JPG" data-caption="Omron 75 Plates">
+                            <img class="" src="./assets/img/Illustrations/CAD/201812_Omron75_07.JPG">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_01.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_01_TN.jpg">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_08.JPG" data-caption="Omron 75 Plates">
+                            <img class="" src="./assets/img/Illustrations/CAD/201812_Omron75_08.JPG">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_02.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_02_TN.jpg">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_09.png" data-caption="Omron 75 Mounting Concept">
+                            <img class="" src="./assets/img/Illustrations/CAD/201812_Omron75_09.png">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_03.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_03_TN.jpg">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_11.JPG" data-caption="Omron 75 CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/201812_Omron75_11.JPG">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_04.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_04_TN.jpg">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_10.mp4" data-caption="Omron 75 Mounting Breakdown">
+                            <img class="" src="./assets/img/Illustrations/CAD/201812_Omron75_01.png">
                         </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_old.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_old_TN.jpg">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201907_Omron75_05.jpg" data-caption="Omron 75 Bare Brass Prototype">
+                            <img class="" src="./assets/img/Illustrations/CAD/201907_Omron75_05.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201907_Omron75_09.jpg" data-caption="Omron 75 Bare Brass Prototype">
+                            <img class="" src="./assets/img/Illustrations/CAD/201907_Omron75_09.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201907_Omron75_07.jpg" data-caption="Omron 75 Bare Brass Prototype">
+                            <img class="" src="./assets/img/Illustrations/CAD/201907_Omron75_07.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201907_Omron75_08.jpg" data-caption="Omron 75 Bare Brass Prototype">
+                            <img class="" src="./assets/img/Illustrations/CAD/201907_Omron75_08.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201907_Omron75_01.jpg" data-caption="Omron 75 Cerakote Prototype">
+                            <img class="" src="./assets/img/Illustrations/CAD/201907_Omron75_01.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201907_Omron75_02.jpg" data-caption="Omron 75 Cerakote Prototype CF plate">
+                            <img class="" src="./assets/img/Illustrations/CAD/201907_Omron75_02.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201907_Omron75_03.jpg" data-caption="Omron 75 Cerakote Prototype Breakdown">
+                            <img class="" src="./assets/img/Illustrations/CAD/201907_Omron75_03.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201907_Omron75_04.jpg" data-caption="Omron 75 Cerakote Prototype">
+                            <img class="" src="./assets/img/Illustrations/CAD/201907_Omron75_04.jpg">
                         </a>
                     </div>
                 </div>
@@ -398,9 +426,9 @@
             <div class="container px-4 px-lg-5 d-md-flex justify-content-center align-items-center">
                 <p class="text-center my-0 px-4">Copyright &copy; Leon Dinh <span id="currentYear"></span></p>
                 <div class="socialIcon">
-                    <a href="https://www.linkedin.com/in/leonxdinh/" target="_blank"> <img src="./assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
-                    <a href="https://github.com/kaider/Portfolio" target="_blank"> <img src="./assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
-                    <a href="https://www.artstation.com/kaazzeerr" target="_blank"> <img src="./assets/img/Logo_ArtStation.png" alt="ArtStation"></a>
+                    <a href="https://www.linkedin.com/in/leonxdinh/" target="_blank" data-tool-tip="LinkedIn"> <img src="./assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
+                    <a href="https://github.com/kaider/Portfolio" target="_blank" data-tool-tip="Github Repo"> <img src="./assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
+                    <a href="https://www.artstation.com/kaazzeerr" target="_blank" data-tool-tip="ArtStation"> <img src="./assets/img/Logo_ArtStation.png" alt="ArtStation"></a>
                 </div>
             </div>
         </footer>
