--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -79,6 +79,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item" href="../index.html#3Dassets">3D assets</a></li>
                                             <li><a class="dropdown-item" href="../index.html#2Dassets">2D illustrations</a></li>
+                                            <li><a class="dropdown-item" href="../index.html#productDesign">Product design</a></li>
                                         </ul>
                                     </div>
                                 </div>
