Finished with the mainPage

--- a/index.html
+++ b/index.html
@@ -354,6 +354,73 @@
 
                     <!-- Product design -->
                     <h4 class="py-5 mt-5 text-light text-opacity-75" id="productDesign">Product Design</h4>
+
+                    <!-- Boring Box -->
+                    <div class="py-4 align-items-end">
+                        <h5 class="playFair text-light text-opacity-75">Boring Box TKL keyboard</h5>
+                        <h6 class="pt-4 pb-3 text-light text-opacity-75 fw-light">
+                            If you're interested in the full build,&nbsp;
+                            <a class="text-light text-opacity-75 fw-light" href="https://geekhack.org/index.php?topic=109511.0" data-tool-tip="https://geekhack.org/index.php?topic=109511.0">please click here.</a>
+                        </h6>
+                    </div>
+                    <div class="container-fluid picturesTrad mb-5">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202004_Box_01.jpg" data-caption="BoringBox CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/202004_Box_01.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202004_Box_02.jpg" data-caption="BoringBox CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/202004_Box_02.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202004_Box_03.jpg" data-caption="BoringBox CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/202004_Box_03.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202004_Box_04.jpg" data-caption="BoringBox CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/202004_Box_04.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202004_Box_05.jpg" data-caption="BoringBox CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/202004_Box_05.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202004_Box_06.jpg" data-caption="BoringBox CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/202004_Box_06.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202004_Box_07.jpg" data-caption="BoringBox CAD Drawing">
+                            <img class="" src="./assets/img/Illustrations/CAD/202004_Box_07.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202104_Box_01.jpg" data-caption="BoringBox Prototypes">
+                            <img class="" src="./assets/img/Illustrations/CAD/202104_Box_01.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202104_Box_02.jpg" data-caption="BoringBox Prototypes">
+                            <img class="" src="./assets/img/Illustrations/CAD/202104_Box_02.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202104_Box_03.jpg" data-caption="BoringBox Prototypes">
+                            <img class="" src="./assets/img/Illustrations/CAD/202104_Box_03.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202104_Box_04.jpg" data-caption="BoringBox Prototypes">
+                            <img class="" src="./assets/img/Illustrations/CAD/202104_Box_04.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202104_Box_05.jpg" data-caption="BoringBox Prototypes">
+                            <img class="" src="./assets/img/Illustrations/CAD/202104_Box_05.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202104_Box_06.jpg" data-caption="BoringBox Prototypes">
+                            <img class="" src="./assets/img/Illustrations/CAD/202104_Box_06.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202104_Box_07.jpg" data-caption="BoringBox Prototypes">
+                            <img class="" src="./assets/img/Illustrations/CAD/202104_Box_07.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202104_Box_08.jpg" data-caption="BoringBox Prototypes">
+                            <img class="" src="./assets/img/Illustrations/CAD/202104_Box_08.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202104_Box_09.jpg" data-caption="BoringBox Prototypes">
+                            <img class="" src="./assets/img/Illustrations/CAD/202104_Box_09.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202104_Box_10.jpg" data-caption="BoringBox Prototypes">
+                            <img class="" src="./assets/img/Illustrations/CAD/202104_Box_10.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202104_Box_11.jpg" data-caption="BoringBox Prototypes">
+                            <img class="" src="./assets/img/Illustrations/CAD/202104_Box_11.jpg">
+                        </a>
+                    </div>
+
+                    <!-- Omron 75 -->
                     <div class="py-4 align-items-end">
                         <h5 class="playFair text-light text-opacity-75">Omron 75 keyboard</h5>
                         <h6 class="pt-4 pb-3 text-light text-opacity-75 fw-light">
