added target_blank for keyboards

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                         <h5 class="playFair text-light text-opacity-75">Boring Box TKL keyboard</h5>
                         <h6 class="pt-4 pb-3 text-light text-opacity-75 fw-light">
                             If you're interested in the full build,&nbsp;
-                            <a class="text-light text-opacity-75 fw-light" href="https://geekhack.org/index.php?topic=109511.0" data-tool-tip="https://geekhack.org/index.php?topic=109511.0">please click here.</a>
+                            <a class="text-light text-opacity-75 fw-light" href="https://geekhack.org/index.php?topic=109511.0" data-tool-tip="https://geekhack.org/index.php?topic=109511.0" target="_blank">please click here.</a>
                         </h6>
                     </div>
                     <div class="container-fluid picturesTrad mb-5">
@@ -425,7 +425,7 @@
                         <h5 class="playFair text-light text-opacity-75">Omron 75 keyboard</h5>
                         <h6 class="pt-4 pb-3 text-light text-opacity-75 fw-light">
                             If you're interested in the full build,&nbsp;
-                            <a class="text-light text-opacity-75 fw-light" href="https://deskthority.net/viewtopic.php?t=22022" data-tool-tip="https://deskthority.net/viewtopic.php?t=22022">please click here.</a>
+                            <a class="text-light text-opacity-75 fw-light" href="https://deskthority.net/viewtopic.php?t=22022" data-tool-tip="https://deskthority.net/viewtopic.php?t=22022" target="_blank">please click here.</a>
                         </h6>
                     </div>
                     <div class="container-fluid picturesTrad">
