favicon for different devices

--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -5,7 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="Leon Dinh" content="Portfolio of Product Designer and 3D Artist, Leon Dinh" />
         <title>UX_TreasuryDirect.gov Redesign</title>
+
+        <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="../assets/favicon2.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="../assets/apple-touch-icon.png" />
+        <link rel="manifest" href="../assets/site.webmanifest">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
 
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
