--- a/About.html
+++ b/About.html
@@ -217,7 +217,7 @@
                 <h5>Let's get in touch.</h5>
                 <div class="pt-4">
                     <a class="hvr-sweep UXCaseButton me-5" href="./assets/Dinh_Leon_Resume.pdf" target="_blank">Resume</a>
-                    <a class="hvr-sweep UXCaseButton" href="mailto:leonx.dinh@gmail.com?subject = Portfolio = Message">Contact</a>
+                    <a class="hvr-sweep UXCaseButton" href="mailto:throwawayinbox6789@gmail.com?subject = Portfolio = Message">Contact</a>
                 </div>
                 <div class="pt-5 d-block d-md-flex">
                     <a class="me-4" href="https://www.linkedin.com/in/leonxdinh/" target="_blank">LinkedIn</a>
