--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -522,7 +522,7 @@
                                             <li>Apply for a Volunteer Position</li>
                                         </ol>
                                         <br>
-                                        <a href="https://www.figma.com/proto/kMFg1znhwOCx0aMWx87OU3/ArtsForAll?node-id=343%3A2501&scaling=scale-down&page-id=56%3A2243&starting-point-node-id=343%3A2501">Click here to browse the Figma Prototype</a>
+                                        <a target="_blank" href="https://www.figma.com/proto/kMFg1znhwOCx0aMWx87OU3/ArtsForAll?node-id=343%3A2501&scaling=scale-down&page-id=56%3A2243&starting-point-node-id=343%3A2501">Click here to browse the Figma Prototype</a>
                                     </div>
                                 </div>
                             </div>
@@ -544,7 +544,7 @@
                                             <li>Apply for a Volunteer Position</li>
                                         </ol>
                                         <br>
-                                        <a href="https://www.figma.com/proto/kMFg1znhwOCx0aMWx87OU3/ArtsForAll?node-id=56%3A1892&scaling=scale-down&page-id=56%3A1891&starting-point-node-id=56%3A1892">Click here for the Figma Prototype</a>
+                                        <a target="_blank" href="https://www.figma.com/proto/kMFg1znhwOCx0aMWx87OU3/ArtsForAll?node-id=56%3A1892&scaling=scale-down&page-id=56%3A1891&starting-point-node-id=56%3A1892">Click here for the Figma Prototype</a>
                                     </div>
                                 </div>
                             </div>
