--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -7,9 +7,9 @@
         <title>UX_Virtual Teaching Platform</title>
 
         <!-- Favicon -->
-        <link rel="icon" type="image/x-icon" href="../assets/favicon2.ico" />
-        <link rel="apple-touch-icon" sizes="180x180" href="../assets/apple-touch-icon.png" />
-        <link rel="manifest" href="../assets/site.webmanifest">
+        <link rel="icon" type="image/x-icon" href="../favicon2.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png" />
+        <link rel="manifest" href="../site.webmanifest">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
 
